--- a/contact.html
+++ b/contact.html
@@ -1,44 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | YouthGood.ai</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <img src="youthgood-logo.png" alt="YouthGood.ai Logo" />
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="teachers.html">For Teachers</a>
-      <a href="students.html">For Students</a>
-      <a href="fun.html">Fun</a>
-      <a href="yeah.html">Y.E.A.H. Program</a>
-      <a href="blogs.html">Blogs</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+{% extends 'base.html' %}
+{% block content %}
 
-  <section class="hero"></section>
+    <section id="contact" class="section">
+      <h2>Contact Us</h2>
+      <p style="text-align: center; max-width: 600px; margin: 0 auto 1rem">
+        Have questions or want to get in touch? Please fill out our contact
+        form.
+      </p>
+      <p style="text-align: center; max-width: 600px; margin: 0 auto 2rem">
+        Or email us directly at
+        <a
+          href="mailto:youthgood.ai@gmail.com"
+          style="color: #a0e7e5; text-decoration: underline"
+          >youthgood.ai@gmail.com</a
+        >
+      </p>
+      <div style="text-align: center">
+        <a
+          class="btn"
+          href="https://docs.google.com/forms/d/e/1FAIpQLSeZL_Vz96Q-w4YscBjnWZLyZnNNfJdv4_0J9N6DZOugaXJeRA/viewform?usp=dialog"
+          target="_blank"
+        >
+          Fill Out Contact Form
+        </a>
+      </div>
+    </section>
 
-  <section id="contact" class="section">
-    <h2>Contact Us</h2>
-    <p style="text-align:center; max-width: 600px; margin: 0 auto 1rem;">
-      Have questions or want to get in touch? Please fill out our contact form.
-    </p>
-    <p style="text-align:center; max-width: 600px; margin: 0 auto 2rem;">
-      Or email us directly at <a href="mailto:youthgood.ai@gmail.com" style="color: #a0e7e5; text-decoration: underline;">youthgood.ai@gmail.com</a>
-    </p>
-    <div style="text-align:center;">
-      <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSeZL_Vz96Q-w4YscBjnWZLyZnNNfJdv4_0J9N6DZOugaXJeRA/viewform?usp=dialog" target="_blank">
-        Fill Out Contact Form
-      </a>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 YouthGood.ai — Inspiring Youth Through Ethical AI</p>
-  </footer>
-</body>
-</html>
+{% endblock %}
