--- a/blogs.html
+++ b/blogs.html
@@ -1,74 +1,104 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Blogs | YouthGood.ai</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <img src="youthgood-logo.png" alt="YouthGood.ai Logo">
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="teachers.html">For Teachers</a>
-      <a href="students.html">For Students</a>
-      <a href="fun.html">Fun</a>
-      <a href="yeah.html">Y.E.A.H. Program</a>
-      <a href="blogs.html">Blogs</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+{% extends 'base.html' %}
+{% block content %}
 
-  <section class="hero"></section>
+<section class="py-5 text-light">
+  <div class="container">
 
-  <section class="section">
-    <h2 style="text-align:center;">Latest Blogs</h2>
-    <div class="cards">
+    <h2 class="text-center fw-bold mb-5">Latest Blogs</h2>
 
-      <!-- Blog 1 - Most Recent -->
-      <div class="card">
-        <img src="whyai.png" alt="What is Artificial Intelligence, Really?">
-        <h3>What is Artificial Intelligence, Really?</h3>
-        <p>
-          A deep dive into what AI truly means beyond buzzwords, exploring how it learns, thinks, and impacts our world.
-          Discover how understanding AI’s real nature helps shape its responsible future.
-        </p>
-        <a class="btn" href="https://medium.com/@lukasleung1/what-is-artificial-intelligence-really-4682f5592a88" target="_blank">
-          Read on Medium
-        </a>
+    <div class="row g-4">
+
+      <!-- Blog 1 -->
+      <div class="col-md-4">
+        <div class="card bg-dark border-0 h-100 shadow">
+
+          <img src="../static/images/whyai.png"
+               class="card-img-top"
+               alt="What is Artificial Intelligence, Really?"
+               style="height: 250px; object-fit: cover;">
+
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">
+              What is Artificial Intelligence, Really?
+            </h5>
+
+            <p class="card-text text-light opacity-75">
+              A deep dive into what AI truly means beyond buzzwords, exploring how it
+              learns, thinks, and impacts our world. Discover how understanding AI’s
+              real nature helps shape its responsible future.
+            </p>
+
+            <a href="https://medium.com/@lukasleung1/what-is-artificial-intelligence-really-4682f5592a88"
+               target="_blank"
+               class="btn btn-outline-info mt-auto w-100">
+              Read on Medium
+            </a>
+          </div>
+
+        </div>
       </div>
 
       <!-- Blog 2 -->
-      <div class="card">
-        <img src="blog-thumbnail.png" alt="Why Ethical AI Must Start With Youth">
-        <h3>Why Ethical AI Must Start With Youth</h3>
-        <p>
-          A passionate call to action for empowering the next generation through AI tools, not fear.
-          Learn why teaching students to use AI responsibly is key to building a more ethical, innovative future.
-        </p>
-        <a class="btn" href="https://medium.com/@lukasleung1/why-ethical-ai-must-start-with-youth-empowering-the-next-generation-through-tools-not-fear-7e42e42c7afc" target="_blank">
-          Read on Medium
-        </a>
+      <div class="col-md-4">
+        <div class="card bg-dark border-0 h-100 shadow">
+
+          <img src="../static/images/blog-thumbnail.png"
+               class="card-img-top"
+               alt="Why Ethical AI Must Start With Youth"
+               style="height: 250px; object-fit: cover;">
+
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">
+              Why Ethical AI Must Start With Youth
+            </h5>
+
+            <p class="card-text text-light opacity-75">
+              A passionate call to action for empowering the next generation through
+              AI tools, not fear. Learn why teaching students to use AI responsibly is
+              key to building a more ethical, innovative future.
+            </p>
+
+            <a href="https://medium.com/@lukasleung1/why-ethical-ai-must-start-with-youth-empowering-the-next-generation-through-tools-not-fear-7e42e42c7afc"
+               target="_blank"
+               class="btn btn-outline-info mt-auto w-100">
+              Read on Medium
+            </a>
+          </div>
+
+        </div>
       </div>
 
       <!-- Blog 3 -->
-      <div class="card">
-        <img src="beyondpic.png" alt="Beyond Algorithms: Who Decides What’s Fair?">
-        <h3>Beyond Algorithms: Who Decides What’s Fair?</h3>
-        <p>
-          Exploring how AI can transform classrooms, empower teachers, and inspire students, while keeping ethics and humanity at the core of learning.
-        </p>
-        <a class="btn" href="https://medium.com/@lukasleung1/beyond-algorithms-who-decides-whats-fair-875a812ea8ba" target="_blank">
-          Read on Medium
-        </a>
+      <div class="col-md-4">
+        <div class="card bg-dark border-0 h-100 shadow">
+
+          <img src="../static/images/beyondpic.png"
+               class="card-img-top"
+               alt="Beyond Algorithms: Who Decides What’s Fair?"
+               style="height: 250px; object-fit: cover;">
+
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">
+              Beyond Algorithms: Who Decides What’s Fair?
+            </h5>
+
+            <p class="card-text text-light opacity-75">
+              Exploring how AI can transform classrooms, empower teachers, and inspire
+              students, while keeping ethics and humanity at the core of learning.
+            </p>
+
+            <a href="https://medium.com/@lukasleung1/beyond-algorithms-who-decides-whats-fair-875a812ea8ba"
+               target="_blank"
+               class="btn btn-outline-info mt-auto w-100">
+              Read on Medium
+            </a>
+          </div>
+
+        </div>
       </div>
 
     </div>
-  </section>
+  </div>
+</section>
 
-  <footer>
-    <p>&copy; 2025 YouthGood.ai — Inspiring Youth Through Ethical AI</p>
-  </footer>
-</body>
-</html>
+{% endblock %}
